--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,43 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B1A8A8"
+    android:clipToPadding="false"
     tools:context=".MainActivity">
+
 
     <Button
         android:id="@+id/scanBtn"
         android:layout_width="202dp"
         android:layout_height="113dp"
+
+        android:layout_marginBottom="572dp"
+        android:backgroundTint="#1E295A"
         android:drawableLeft="@android:drawable/ic_menu_camera"
         android:hapticFeedbackEnabled="false"
         android:text="SCAN"
+        android:textColor="#E8E3E3"
         android:textSize="18sp"
+        app:cornerRadius="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.077" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.143" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recView"
-        android:layout_width="383dp"
-        android:layout_height="493dp"
+        android:layout_width="match_parent"
+        android:layout_height="481dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/yourScans"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/yourScans"
-        app:layout_constraintTop_toBottomOf="@+id/scanBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/yourScans"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/yourScans"
         android:layout_width="108dp"
         android:layout_height="35dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Your Scans"
         android:textAlignment="center"
+        android:textColor="#171717"
         android:textSize="17sp"
-        app:layout_constraintBottom_toTopOf="@+id/recView"
         app:layout_constraintEnd_toEndOf="@+id/scanBtn"
         app:layout_constraintStart_toStartOf="@+id/scanBtn"
         app:layout_constraintTop_toBottomOf="@+id/scanBtn" />
