--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -18,8 +18,8 @@
         android:hint="Your email address"
         android:inputType="textEmailAddress"
         android:paddingLeft="13dp"
-        android:textColor="#9A9393"
-        android:textColorHint="#9A9393"
+        android:textColor="#171717"
+        android:textColorHint="#F2000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -35,8 +35,8 @@
         android:hint="Set Password"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
-        android:textColor="#9A9393"
-        android:textColorHint="#9A9393"
+        android:textColor="#171717"
+        android:textColorHint="#F2000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/et_email"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,8 +48,11 @@
         android:layout_width="114dp"
         android:layout_height="55dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40sp"
+        app:cornerRadius="40sp"
         android:text="Register"
+        android:backgroundTint="#1E295A"
+        android:textColor="#B5A9A9"
         app:layout_constraintEnd_toEndOf="@+id/et_password"
         app:layout_constraintStart_toStartOf="@+id/et_password"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
